--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,8 @@
     <string name="AddYourOwnRecipe">Adding Your Own Recipe</string>
     <string name="ContactUs">Contact Us</string>
     <string name="help_menu">Help</string>
+
+    <string name="type">Type</string>
+    <string name="category">Category</string>
+    <string name="healthy">Is Healthy</string>
 </resources>
