added animations, fixed the recipe activity added title bar
still need to figure out how to block something in a list view (before it loads)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,13 @@
     <string name="type">Type</string>
     <string name="category">Category</string>
     <string name="healthy">Is Healthy</string>
+
+    <string-array name="measurementUnits">
+        <item>Units</item>
+        <item>Cups</item>
+        <item>tbsp</item>
+        <item>tsp</item>
+        <item>g</item>
+        <item>mL</item>
+    </string-array>
 </resources>
